@@ -18,7 +18,6 @@
 
 package com.fluendo.plugin;
 
-import java.util.*;
 import com.fluendo.jst.*;
 import com.fluendo.utils.*;
 
