@@ -1,3 +1,12 @@
+2006-01-18  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* build.xml:
+	  always include stubs in classpath for now;
+	  see what this does with the Sun compiler
+	* src/com/fluendo/jst/Element.java:
+	* src/com/fluendo/plugin/AudioSink.java:
+	  remove unneeded imports
+
 2006-01-17  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* build.xml:
